CI/k8s/overlays/dev/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: twitter-stream-connect
  name: twitter-stream-connect
  namespace: kafka
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app:  twitter-stream-connect
  template:
    metadata:
      labels:
        app:  twitter-stream-connect
    spec:
      containers:
        - name:  twitter-stream-connect
