CI/k8s/overlays/dev/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: auth-server-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
...
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-server-vs
spec:
  hosts:
    - "*"
  gateways:
    - auth-server-gateway
  http:
    - match:
        - uri:
            prefix: /security/
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 8083
            host: auth-server
